# bias-mitigation-llms

./: .gitignore  README.md  docker-compose.yml
backend/: .gitignore  pyproject.toml
backend/src/bias_detection_api/: .dockerignore  Dockerfile  bias_detection.py  bias_neutralisation.py  few_shot_prompting_functions.py  requirements.txt  rest_api.py  test_data.json
backend/src/bias_detection_api/helpers/: load_key.py
backend/tests/: test_few_shot_prompting_functions.py  test_rest_api.py
documentation/: main.bbl  main.bbl-SAVE-ERROR  main.tex  references.bib
frontend/bias-mitigation-frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/bias-mitigation-frontend/src/: App.css  App.tsx  index.css
frontend/bias-mitigation-frontend/src/components/: BiasSection.tsx  InputBox.tsx  OutputBox.tsx  ParsedText.tsx  interfaces.ts
report/: .gitignore  main.tex  references.bib
