[project]
name = "bias_mitigation_api"
version = "0.1.0"
description = "bias mitigation api prototype"
readme = "README.md"
requires-python = ">=3.10"
dependecies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backed = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths=["tests"]
pythonpath=["src"]
